# music-player

./: .gitlab-ci.yml  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classDecoder-members.html  classDecoder.html  classDecoder.js  classErrorTrack-members.html  classErrorTrack.html  classErrorTrack.js  classErrorTrack__coll__graph.map  classErrorTrack__coll__graph.md5  classErrorTrack__inherit__graph.map  classErrorTrack__inherit__graph.md5  classGenericTrack-members.html  classGenericTrack.html  classGenericTrack.js  classGenericTrack__inherit__graph.map  classGenericTrack__inherit__graph.md5  classIDecoder-members.html  classIDecoder.html  classIDecoder.js  classIDecoder__inherit__graph.map  classIDecoder__inherit__graph.md5  classMP3Track-members.html  classMP3Track.html  classMP3Track.js  classMP3Track__coll__graph.map  classMP3Track__coll__graph.md5  classMP3Track__inherit__graph.map  classMP3Track__inherit__graph.md5  classMp3Decoder-members.html  classMp3Decoder.html  classMp3Decoder.js  classMp3Decoder__coll__graph.map  classMp3Decoder__inherit__graph.md5  classPlayer-members.html  classPlayer.html  classPlayer.js  (+87 more)
.github/workflows/: doxygen.yml
docs/: README.md  architecture.md  doxy_mainpage.md  example.md  project_specification.md
docs/doxygen/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_7.js  files_0.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_9.js  (+9 more)
src/: CMakeLists.txt  README.md  decoder.cpp  decoder.hpp  installation_guide.md  main.cpp  player.cpp  player.hpp  ui_controller.cpp  ui_controller.hpp  ui_renderer.cpp  ui_renderer.hpp
src/minimp3/: minimp3.c
src/testmp3files/: README.md
